--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "futaba",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -20,5 +19,6 @@
   "bugs": {
     "url": "https://github.com/Queenshiba/futaba/issues"
   },
-  "homepage": "https://github.com/Queenshiba/futaba#readme"
+  "homepage": "https://github.com/Queenshiba/futaba#readme",
+  "description": ""
 }
